--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "compressorjs": "^1.1.1",
     "emoji-picker-react": "^3.4.8",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
